[project]
name = "langgraph-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.1",
    "langchain-community>=0.3.15",
    "langchain-text-splitters>=0.3.4",
    "faiss-cpu>=1.9.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "accelerate>=0.25.0",
]
